--- a/Go 语言/基础语法.md
+++ b/Go 语言/基础语法.md
@@ -33,3 +33,14 @@ Go语言一行代表一个语句结束，所有语句都不需要使用`;`来结
 # 标识符
 与大多数语言一致
 * 标识符只能由字母，下划线，数字组成，且不能以数字开头
+***
+# 关键字
+go的关键字比较少，总共有25个关键字
+
+|   |   |   |   |   |
+|---|---|---|---|---|
+|break|default|func|interface|select|
+|case|defer|go|map|struct|
+|chan|else|goto|package|switch|
+|const|fallthrough|if|range|type|
+|continue|for|import|return|var|
