--- a/Go 语言/基础语法.md
+++ b/Go 语言/基础语法.md
@@ -19,6 +19,7 @@ fmt.Print("come on")
 Go语言一行代表一个语句结束，所有语句都不需要使用`;`来结尾
 
 **除非**
+
 想要在一行写多个语句，这时候就需要加上`;`用于分隔语句
 ***
 # 注释
@@ -30,7 +31,7 @@ Go语言一行代表一个语句结束，所有语句都不需要使用`;`来结
 * 既可以用于多行注释，又可以用于单行注释
 只需把需要注释的内容包起来
 ***
-# 标识符
+# 标识符[^1]
 与大多数语言一致
 * 标识符只能由字母，下划线，数字组成，且不能以数字开头
 ***
@@ -44,3 +45,5 @@ go的关键字比较少，总共有25个关键字
 |chan|else|goto|package|switch|
 |const|fallthrough|if|range|type|
 |continue|for|import|return|var|
+
+[^1]: 标识符：为代码元素（如变量、函数、类型、包等）命名的字符串
