--- a/Go 语言/数据类型.md
+++ b/Go 语言/数据类型.md
@@ -1,4 +1,4 @@
-以下go中几种数据类型以及各自类型的例子：
+下面是go中几种数据类型以及各自的例子：
 1. **布尔型**
 	* True和False
 2. **数字类型**
@@ -11,6 +11,67 @@
 	* 数组
 	* 结构化
 	* 切片
-	* ......
 ***
-# 数字类型
+# 数字
+## 1. 整型
+### **无符号[^1]整型（uint）**
+* **unit**
+	* 常用
+	* 无符号整型（32位[^2]或64位）[^4]
+***
+1. **uint8**
+	* 无符号8位整型（0 到 255）
+	* 内存占用 **1字节**
+2. **uint16**
+	* 无符号16位整型（0 到 65,536）
+	* 内存占用 **2字节**
+3. **uint32**
+	* 无符号32位整型（0 到 4,294,967,295）
+	* 内存占用 **4字节**
+4. **uint64**  
+	* 无符号 64 位整型 (0 到 18,446,744,073,709,551,615)
+	* 内存占用 **8字节**
+### **有符号整型（int）**
+* **int**
+	* 常用
+	* 有符号整型（32位或64位）[^4]
+***
+1. **int8**
+	* 有符号8位整型（-128 到 127）
+	* 内存占用 **1字节**
+2. **int16**
+	* 有符号16位整型（-32,768 到 32,767）
+	* 内存占用 **2字节**
+3. **int32**
+	* 有符号32位整型（-2,147,483,648 到 2,147,483,647）
+	* 内存占用 **4字节**
+4. **int64**  
+	* 有符号 64 位整型 (-9,223,372,036,854,775,808 到 9,223,372,036,854,775,807)
+	* 内存占用 **8字节**
+## 2. 浮点型
+注：go语言中没有单独的`float`，使用前必须指定位数
+1. **float32**
+	* IEEE-754[^3] 32位浮点型数
+2. **float64**
+	* IEEE-754 64位浮点型数
+3. **complex64**
+	* 由两个`float32`组成
+	* 32 位实数和虚数（虚实各占4字节）
+4. **complex128**
+	* 由两个`float64`组成
+	* 64 位实数和虚数（虚实各占8字节）
+## 3. 其他数字类型
+1. **byte**
+	* 类似 uint8
+2. **rune**
+	* 类似 int32
+3. **uintptr**
+	* 无符号整型，用于存放一个指针
+
+[^1]: 符号指+或-，无符号为非负数，即只有0和正数
+
+[^2]: 位数：二进制数的长度，如10110010就是8位数。
+
+[^3]: 计算机中表示浮点数（小数）的国际标准，定义了浮点数在二进制中的存储格式，几乎所有语言都遵循这一标准
+
+[^4]: int和uint会根据当前平台自动选择最合适的位数，如在32位系统将选择32位，64位系统上选择64位
