--- a/Go 语言/变量.md
+++ b/Go 语言/变量.md
@@ -32,27 +32,24 @@ v1, v2, v3 := v1, v2, v3
 ```
 ***
 # 其他
-## 1. 指定变量类型
-可使用下方代码块的方法给变量赋值
+
+## 1.  显式类型定义（有类型说明）
 ```go
-//第一种
 var lbw int = 666
-//第二种
-var lbw int
-lbw = 666
 ```
-如果变量声明后没有初始化，系统将默认变量为这些值：
+`int`就是类型说明，加类型说明就是指定数据类型
+
+另外如果变量声明后没有初始化，系统将默认变量为这些值：
 * **数字类型** = 0
 * **布尔类型** = false
 * **字符串** = “”（空字符串）
-## 2. 不指定变量类型（根据值自行判断变量类型）⭐
+## 2. 隐式类型定义（无类型说明）⭐
 ```go
 var t1 = true
-var t1 bool = true
 ///////////or////////////
 n1 := 5
 ```
-这些变量无论声明时加不加类型结果都是相同的，因为系统会自动根据值来判断变量类型（很舒服:）
+不加类型说明的话系统会自动根据值来判断变量的类型（很舒服:）
 ***
 # 值类型和引用类型
 ## 1. 值类型
