--- a/笔记更新日志.md
+++ b/笔记更新日志.md
@@ -18,4 +18,10 @@ v0.2（3.12）
 * 添加go/内存地址笔记框架
 * 完善go/数据类型笔记
 ***
-
+v0.3（3.14）
+新增内容
+* 新增go的学习推荐顺序文档
+* 新增go/常量笔记
+* 新增go/运算符笔记框架
+修改内容
+* 修改go/变量笔记相关说明
