--- a/Go 语言/运算符.md
+++ b/Go 语言/运算符.md
@@ -6,7 +6,7 @@
 5. 赋值运算符
 6. 其他运算符
 ***
-# 1. 算术运算符
+# 1. ⭐算术运算符
 ## 1. 相加（ + )
 ```go
 var V int
@@ -55,6 +55,7 @@ fmt.Print(V)
 **输出为：`1`**
 ***
 ## 6. 自增（ ++ ）
+值加1
 ```go
 var V int = 1
 V++
@@ -63,6 +64,7 @@ fmt.Print(V)
 **输出为：`2`**
 ***
 ## 7. 自减（ -- ）
+值减1
 ```go
 var V int = 1
 V--
@@ -70,4 +72,172 @@ fmt.Print(V)
 ```
 **输出为：`0`**
 ***
-# 关系运算符
+# 2. ⭐关系运算符
+## 1. 相等（ == ）
+相同为True，不同为False
+```go
+var a = 1
+var b = 1
+var c = a==b
+fmt.Print(c)
+```
+**输出为：`true`**
+***
+## 2. 不相等（ != ）
+与`==`相反
+```GO
+var a = 1
+var b = 1
+var c = a != b
+fmt.Print(c)
+```
+**输出为：`false`**
+***
+## 3. 大于/大于等于（ >/>= ）
+```go
+var a = 1
+var b = 2
+var c = a >= b
+fmt.Print(c)
+```
+**输出为：`false`**
+***
+## 4. 小于/小于等于（ </<= ）
+```go
+var a = 1
+var b = 2
+var c = a <= b
+fmt.Print(c)
+```
+**输出为：`true`**
+***
+# 3. ⭐逻辑运算符（ 与或非 ）
+## 1. 逻辑AND（ && ）
+都为true，才返回true
+```go
+var a = 1
+var b = 2
+var c = 3
+if a <= b && a == c {
+//a<=b为true，a==c为false，所以输出c
+	fmt.Print(a)
+} else {
+	fmt.Print(c)
+}
+```
+**输出为：`3`**
+***
+## 2. 逻辑OR ( || )
+至少拥有一个true，就返回true
+```go
+var a = 1
+var b = 2
+var c = 3
+if a <= b && a == c {
+//a<=b为true，所以输出a
+    fmt.Print(a)
+} else {
+    fmt.Print(c)
+}
+```
+**输出为：`1`**
+***
+## 3. 逻辑NOT（ ! ）
+true返回false，false返回true
+```go
+var a = 1
+var b = 2
+var c = 3
+if !(a <= b) {
+    //a<=b为true，所以输出c
+	fmt.Print(a)、
+} else {
+	fmt.Print(c)
+}
+```
+**输出为：`3`**
+***
+# 4. ⭐位运算符
+位运算符用于操作内存中整数的二进制
+## 1. 按位与（ & ）
+同为1才为1
+```
+11=1
+10=0
+01=0
+00=0
+```
+***
+## 2. 按位或（ | ）
+至少一个1才为1
+```
+11=1
+10=1
+01=1
+00=0
+```
+***
+## 3. 按位异或（ ^ ）
+不同才为1
+```
+11=0
+10=1
+01=1
+00=0
+```
+***
+## 4. 左移运算符（ << ）
+将二进制数全部向左移动`<<`n位
+```
+a=60,二进制数为0011 1100
+
+a << 2
+
+a=240,二进制数为1111 0000
+```
+***
+## 4. 右移运算符（ >> ）
+将二进制数全部向左移动`>>`n位
+```
+a=60,二进制数为0011 1100
+
+a >> 2
+
+a=240,二进制数为0000 1111
+```
+***
+# 5. 赋值运算符
+所有都是先`操作`再`赋值`
+```go
+var a=5
+var b=10
+a+=b     //相当于a=a+b，先进行a+b，再赋值给a
+fmt.Print(a)
+```
+**输出为：`15`**
+
+下方为go中所有的赋值运算符
+ 1. **=**
+ 2. **+=**
+ 3. **-=**
+ 4. **\*=**
+ 5. **/=**
+ 6. **%=**
+ 7. **<<=**
+ 8. **=**
+ 9. **&=**
+ 10. **^=**
+ 11. **|=**
+ ***
+# 6. 其他运算符
+*  **&**
+用于返回变量的存储地址
+```go
+&变量名
+```
+* ** \* **
+用于声明指针变量
+```go
+*a
+//a为指针变量
+```
