--- a/笔记更新日志.md
+++ b/笔记更新日志.md
@@ -30,3 +30,12 @@ v0.3（3.14）
 
 修改内容
 * 修改go/变量笔记相关说明
+***
+v0.4（3.20）
+
+新增内容：
+* 完善go/运算符（笔记）
+* 补充go/go学习顺序（笔记）
+* 添加go/函数（笔记）
+* 添加go/条件判断语句（笔记）
+* 添加go/循环语句（笔记）
