--- a/Go 语言/常量.md
+++ b/Go 语言/常量.md
@@ -41,7 +41,7 @@ const (
 一种特殊常量，用于在常量声明（`const` 块）中生成一组连续的、有规律的**无类型整数常量**。它通常用于简化枚举或连续值的定义
 
 下面是`iota`的**特点**：
-## **1. 从0开始递增**
+## 1. 从0开始递增
 在`const`块中，`iota`的初始值为0，后续每新增一行常量声明，`iota`的值会自动**递增1**
 ```go
 const (
