--- a/笔记更新日志.md
+++ b/笔记更新日志.md
@@ -36,6 +36,12 @@ v0.4（3.20）
 新增内容：
 * 完善go/运算符（笔记）
 * 补充go/go学习顺序（笔记）
-* 添加go/函数（笔记）
+* 添加go/函数（笔记框架）
 * 添加go/条件判断语句（笔记）
 * 添加go/循环语句（笔记）
+***
+v0.5（3.21）
+新增内容：
+* 添加go/变量作用域（笔记）
+* 添加go/数组（笔记）
+* 补充go/函数（笔记）
