--- a/笔记更新日志.md
+++ b/笔记更新日志.md
@@ -50,3 +50,15 @@ v0.6（3.22）
 新增内容
 * 添加go/指针（笔记）
 * 添加go/结构体（笔记框架）
+***
+v0.7 （3.28）
+新增内容
+* 添加go/并发（笔记）WIP
+* 添加go/range（笔记）
+* 添加go/map（笔记）
+* 添加go/切片（笔记）
+* 完善go/结构体（笔记）
+* 补充go/go学习顺序（笔记）
+修改内容
+* 修改go/数组（笔记）部分内容
+* 导出go/循环语句（笔记）中的for range遍历到go/range（笔记）中
