--- a/Go 语言/并发.md
+++ b/Go 语言/并发.md
@@ -65,8 +65,17 @@ func main() {
 这时候就需要一个“管道”（Channel）来传递数据。
 ## 基本使用
 ```go
+//声明
+通道名 := make(chan 类型，缓冲容量（可选）)
+
+//使用
+ch <- a+b
+sum <- ch
+```
+
+```go
 func main() {
-    ch := make(chan int) // 创建一个传递整数的通道ch
+    ch := make(chan int) // 创建一个传递整数的无缓冲通道ch
 
     // 任务A：发送数据到通道
     go func() {
@@ -80,8 +89,72 @@ func main() {
 }
 ```
 * `<-`符号表示数据流向
-* 无缓冲通道（默认）会堵塞，直到有人接收数据
+* **同步机制**：采用1发送1接收的形式，所以无缓冲通道（默认）会堵塞，直到有人接收数据
+* Channel遵循**先进先出**的处理原则，**最先进入的数据最先被取出**
+# 三、示例演示
+1. 带`sync`包
+```go
+package main
 
+import (
+    "fmt"
+    "sync"
+)
+
+var ch = make(chan int)
+var wg sync.WaitGroup
+
+
+func main() {
+    a, b, c, d := 1, 5, 10, 15
+    wg.Add(2) //添加2个任务
+    go sum1(a, b) //运行子goroutine
+    go sum2(c, d) //运行子goroutine
+    totel := <-ch + <-ch //将两个子goroutine的数据用通道传入totel
+    wg.Wait() //等待任务全部完成
+    fmt.Print(totel)
+}
+  
+func sum1(a, b int) {
+    defer wg.Done() //标记任务已完成，任务-1
+    sum := a + b
+    ch <- sum
+}
+
+func sum2(a, b int) {
+    defer wg.Done() //标记任务已完成，任务-1
+    sum := a + b
+    ch <- sum
+}
+```
+2. 简单版
+```go
+package main
+
+import "fmt"
+
+var ch = make(chan int)
+
+
+func main() {
+    a, b, c, d := 1, 5, 10, 15
+    go sum1(a, b) //运行子goroutine
+    go sum2(c, d) //运行子goroutine
+    totel := <-ch + <-ch //将两个子goroutine的数据用通道传入totel
+    fmt.Print(totel)
+}
+  
+func sum1(a, b int) {
+    sum := a + b
+    ch <- sum
+}
+
+func sum2(a, b int) {
+    sum := a + b
+    ch <- sum
+}
+```
+* 因为无缓冲chan的同步机制，所以就算不加wait也不会导致主goroutine比子goroutine提前结束
 
 [^1]: 指操作系统能够进行运算调度的最小单位。它被包含在进程之中，是进程中的实际运作单位。一条线程指的是进程中一个单一顺序的控制流，一个进程中可以并发多个线程，每条线程并行执行不同的任务。
 
