--- a/笔记更新日志.md
+++ b/笔记更新日志.md
@@ -66,3 +66,19 @@ v0.8 （3.28）
 修改内容
 * 修改go/数组（笔记）部分内容
 * 导出go/循环语句（笔记）中的for range遍历到go/range（笔记）中
+***
+v1.0（4.1）
+这几天忘记更新了，~~难道不是因为没人看吗~~，总之虽然没有更新，但是学习还是没漏下滴。这次更新内容很多，所以干脆跳过0.9版本直接1.0了
+主要新增内容：
+* 添加go/包（文件夹）
+	* 里面有go各种包的介绍
+* 添加go/错误处理（文件夹）
+	* 最近代码错误有点多，正所谓失败是成功之母，所以就记下来了
+* 添加go/defer关键字（笔记）
+* 添加go/关键字（笔记）
+主要修改内容：
+* 修改go/并发、指针（笔记）部分内容
+* 移除go/基础语法（笔记）中的关键字章节
+
+另外因为go学的差不多了，最近准备找个项目练练手，尽情期待
+***
