--- a/Go 语言/指针.md
+++ b/Go 语言/指针.md
@@ -1,33 +1,28 @@
 指针变量指向一个值的内存地址
-```go
-func main() {
-   var a int= 20   /* 声明实际变量 */
-   var ip *int        /* 声明指针变量 */
-
-   ip = &a  /* 指针变量的存储地址 */
-
-   fmt.Printf("a 变量的地址是: %x\n", &a  )
-
-   /* 指针变量的存储地址 */
-   fmt.Printf("ip 变量储存的指针地址: %x\n", ip )
-
-   /* 使用指针访问值 */
-   fmt.Printf("*ip 变量的值: %d\n", *ip )
-}
-
-//输出为：
-a 变量的地址是: c00000a0f8
-ip 变量储存的指针地址: c00000a0f8
-*ip 变量的值: 20
-```
 # 一、基本格式
+## 声明
 ```go
 var 变量名 *数据类型
+
+变量a := &变量b //自动识别数据类型，将a初始化为指向b地址的指针变量
 ```
 
 ```go
 var p1 *int
 var p2 *float64
+```
+## 解引用
+使用`·`关键字
+```go
+fmt.Println(*p) // 输出 42
+*p = 21 // 通过指针修改 a 的值
+fmt.Println(a) // 输出 21
+```
+## 获取变量地址
+```go
+a := 42
+p := &a // p 现在指向 a 的内存地址
+fmt.Print(p) //输出内存地址
 ```
 ## 空指针
 当一个指针被定义后并没有分配到任何变量时，它的值为**nil**，指代0值或空值
@@ -51,6 +46,28 @@ if(p1 == nil){
 }
 ```
 ***
+## 示例演示
+```go
+func main() {
+   var a int= 20   /* 声明实际变量 */
+   var ip *int        /* 声明指针变量 */
+
+   ip = &a  /* 指针变量的存储地址 */
+
+   fmt.Printf("a 变量的地址是: %x\n", &a  )
+
+   /* 指针变量的存储地址 */
+   fmt.Printf("ip 变量储存的指针地址: %x\n", ip )
+
+   /* 使用指针访问值 */
+   fmt.Printf("*ip 变量的值: %d\n", *ip )
+}
+
+//输出为：
+a 变量的地址是: c00000a0f8
+ip 变量储存的指针地址: c00000a0f8
+*ip 变量的值: 20
+```
 # 二、深入了解
 ## 一、指针数组
 将数组存储在指针数组中
